Added Transient Buffer implementation
(Persistently Mapped Buffer which can have chunks of it allocated)

--- a/source/Irrlicht/Irrlicht-gcc.cbp
+++ b/source/Irrlicht/Irrlicht-gcc.cbp
@@ -444,7 +444,6 @@
 		<Unit filename="../../include/EMaterialFlags.h" />
 		<Unit filename="../../include/EMaterialTypes.h" />
 		<Unit filename="../../include/EMeshWriterEnums.h" />
-		<Unit filename="../../include/EMessageBoxFlags.h" />
 		<Unit filename="../../include/EPrimitiveTypes.h" />
 		<Unit filename="../../include/ESceneNodeAnimatorTypes.h" />
 		<Unit filename="../../include/ESceneNodeTypes.h" />
@@ -467,6 +466,7 @@
 		<Unit filename="../../include/IGPUBuffer.h" />
 		<Unit filename="../../include/IGPUMappedBuffer.h" />
 		<Unit filename="../../include/IGPUProgrammingServices.h" />
+		<Unit filename="../../include/IGPUTransientBuffer.h" />
 		<Unit filename="../../include/IGeometryCreator.h" />
 		<Unit filename="../../include/IImage.h" />
 		<Unit filename="../../include/IImageLoader.h" />
@@ -563,7 +563,6 @@
 		<Unit filename="CAnimatedMeshSceneNode.h" />
 		<Unit filename="CB3DMeshFileLoader.cpp" />
 		<Unit filename="CB3DMeshFileLoader.h" />
-		<Unit filename="CBSPMeshFileLoader.h" />
 		<Unit filename="CBillboardSceneNode.cpp" />
 		<Unit filename="CBillboardSceneNode.h" />
 		<Unit filename="CBoneSceneNode.cpp" />
@@ -599,28 +598,7 @@
 		<Unit filename="CFileList.h" />
 		<Unit filename="CFileSystem.cpp" />
 		<Unit filename="CFileSystem.h" />
-		<Unit filename="CGUIContextMenu.h" />
-		<Unit filename="CGUIEditBox.h" />
-		<Unit filename="CGUIFileOpenDialog.h" />
-		<Unit filename="CGUIFont.h" />
-		<Unit filename="CGUIImage.h" />
-		<Unit filename="CGUIImageList.h" />
-		<Unit filename="CGUIInOutFader.h" />
-		<Unit filename="CGUIListBox.h" />
-		<Unit filename="CGUIMenu.h" />
-		<Unit filename="CGUIMeshViewer.h" />
-		<Unit filename="CGUIMessageBox.h" />
-		<Unit filename="CGUIModalScreen.h" />
-		<Unit filename="CGUIScrollBar.h" />
-		<Unit filename="CGUISkin.h" />
-		<Unit filename="CGUISpinBox.h" />
-		<Unit filename="CGUISpriteBank.h" />
-		<Unit filename="CGUIStaticText.h" />
-		<Unit filename="CGUITabControl.h" />
-		<Unit filename="CGUITable.h" />
-		<Unit filename="CGUIToolBar.h" />
-		<Unit filename="CGUITreeView.h" />
-		<Unit filename="CGUIWindow.h" />
+		<Unit filename="CGPUTransientBuffer.cpp" />
 		<Unit filename="CGeometryCreator.cpp" />
 		<Unit filename="CGeometryCreator.h" />
 		<Unit filename="CImage.cpp" />
@@ -824,9 +802,6 @@
 		<Unit filename="CTRTextureWire2.cpp" />
 		<Unit filename="CTarReader.cpp" />
 		<Unit filename="CTarReader.h" />
-		<Unit filename="CTerrainSceneNode.h" />
-		<Unit filename="CTerrainTriangleSelector.h" />
-		<Unit filename="CTextSceneNode.h" />
 		<Unit filename="CTimer.h" />
 		<Unit filename="CTriangleBBSelector.cpp" />
 		<Unit filename="CTriangleBBSelector.h" />
@@ -849,6 +824,8 @@
 		<Unit filename="CZBuffer.h" />
 		<Unit filename="CZipReader.cpp" />
 		<Unit filename="CZipReader.h" />
+		<Unit filename="FW_Mutex.cpp" />
+		<Unit filename="FW_Mutex.h" />
 		<Unit filename="IBurningShader.cpp" />
 		<Unit filename="IBurningShader.h" />
 		<Unit filename="IDepthBuffer.h" />
@@ -858,7 +835,6 @@
 		<Unit filename="Irrlicht.cpp" />
 		<Unit filename="MacOSX/CIrrDeviceMacOSX.h" />
 		<Unit filename="MacOSX/CIrrDeviceMacOSX.mm" />
-		<Unit filename="Octree.h" />
 		<Unit filename="S2DVertex.h" />
 		<Unit filename="S4DVertex.h" />
 		<Unit filename="STextureSamplingParams.cpp" />
